--- a/VeltiumCharger/data/WebServer/style.css
+++ b/VeltiumCharger/data/WebServer/style.css
@@ -1,13 +1,213 @@
-<style>
-#file-input,input{width:100%;height: 80px;border-radius:4px;margin:10px auto;font-size:15px}
-input{background:#f1f1f1;border:0;padding:0 15px}
-body{background:#000000;font-family:sans-serif;font-size:14px;color:#777}
-#file-input{padding:0;border:1px solid #EEE;line-height:80px;text-align:left;display:block;cursor:pointer}
-#bar,#prgbar{background-color:#f1f1f1;border-radius:10px}
-#bar{background-color:#3498db;width:0%;height:10px}
-form{background:#fff;max-width:400px;margin:60px auto;padding:30px;border-radius:5px;text-align:center}
-.btn{background:#3498db;color:#fff;cursor:pointer}
-table {font-family: arial, sans-serif;border-collapse: collapse;width: 100%;}
-td, th {border: 1px solid #dddddd;text-align: center;padding: 8px;}
-tr:nth-child(even) {background-color: #dddddd;}
-</style></html>
+h1 {
+    
+    background-size: 40px;
+    padding-left: 55px;
+    background-position-y: -3px;
+}
+.header {
+    padding: 30px;
+    text-align: left;
+    /*background: #1abc9c;*/
+    background: rgb(61, 173, 248);
+    color: white;
+  }
+.topnav-right {
+    float: right;
+  }
+
+.titulo {
+    display: inline-block;
+    color: #f2f2f2;
+    background-color: rgb(61, 173, 248);
+    }
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #0288D1;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+    }
+  }
+
+  div.centro{
+    display: inline-block; 
+    text-align: left;
+  }
+  div.container {
+/*  position:absolute;
+    height: 50px;
+    width: 50px;  
+    left:30%;*/
+    margin:  50px 50px 75px;
+    text-align: center;
+  }
+
+  input[type=text], select {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=password], select {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  /*input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  } */
+  
+  span[class=dht-labels]{
+    padding: 8px 8px;
+    line-height : 45px;
+  }
+
+  span[class=units]{
+    margin-left: 4px;
+  }
+  h4{
+    padding: 8px 20px;
+  }
+
+  /* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  height: 360px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
+  /* Create three equal columns that floats next to each other */
+  .columnstatus {
+    float: left;
+    width: 20%;
+    /*padding: 10px;*/
+    height: 400px;
+    
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:  50px;
+  }
+
+  body{
+    background-color: #f2f2f2;
+  }
+
+  .centrado{
+    text-align: center;
+  }
+
+  .logo{
+    text-indent: -99999999px;
+    background: url('veltium-logo-big.png');
+  }
+
+  .boton {
+    background-color: #008CBA; /* Green */
+    border: grey;
+    color: white;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+  }
+
+  .boton:hover{
+    background-color: #ddd;
+    color: black;
+  }
